--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -51,7 +51,7 @@ jobs:
           VERCEL_ORG_ID: ${{ secrets.VERCEL_ORG_ID }}
           VERCEL_PROJECT_ID: ${{ secrets.VERCEL_PROJECT_ID }}
           VERCEL_SCOPE: ${{ secrets.VERCEL_TEAM_NAME }}
-          PRODUCTION: ${{ inputs.environment }} == 'production'
+          PRODUCTION: github.event.inputs.environment == 'production'
           BUILD_ENV: |
             SHOW_ENV=${{ vars.SHOW_ENV }}
             BASE_URL=${{ secrets.BASE_URL }}
