--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -3,5 +3,9 @@
     "next/core-web-vitals",
     "prettier",
     "plugin:storybook/recommended"
-  ]
+  ],
+  "rules": {
+    "no-unused-vars": "warn"
+  }
 }
+
