--- a/.github/workflows/deploy-storybook.yaml
+++ b/.github/workflows/deploy-storybook.yaml
@@ -14,7 +14,6 @@ jobs:
     steps:
       - name: Clone Repository
         uses: actions/checkout@v3
-        if: github.event.inputs.git-ref == ''
 
       - name: Get changed files in the docs folder
         id: changed-files-specific
@@ -35,15 +34,6 @@ jobs:
             "outputDirectory": "./storybook-static"
           }' >> vercel.json
 
-          echo "cat vercel.json"
-          cat vercel.json
-
-          echo "ls -a ."
-          ls -a .
-
-          echo "ls ${{ github.workspace }}"
-          ls ${{ github.workspace }}
-
       - name: Deploy to Vercel Action
         id: deploy-vercel
         uses: BetaHuhn/deploy-to-vercel-action@v1
@@ -57,29 +47,8 @@ jobs:
           BUILD_ENV: |
             SHOW_ENV=storybook
             BASE_URL=${{ secrets.BASE_URL }}
-          ALIAS_DOMAINS: |
-            https://${{ inputs.isPreview && '' || 'storybook.' }}${{ vars.APP_DOMAIN }}
-          CREATE_COMMENT: false
-
-      - name: Create comment
-        uses: phulsechinmay/rewritable-pr-comment@v0.3.0
-        if: ${{ steps.vercel-deploy.outputs.DEPLOYMENT_CREATED && inputs.isPreview }}
-        with:
-          message: |
-            This pull request has been deployed to Vercel.
-
-            <table>
-              <tr>
-                <td><strong>✅ Storybook Preview:</strong></td>
-                <td><a href='${{ steps.vercel-deploy.outputs.PREVIEW_URL }}'>${{ steps.vercel-deploy.outputs.PREVIEW_URL }}</a></td>
-              </tr>
-              <tr>
-                <td><strong>🔍 Inspect:</strong></td>
-                <td><a href='${{ steps.vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }}'>${{ steps.vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }}</a></td>
-              </tr>
-            </table>
-          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
-          COMMENT_IDENTIFIER: 'vercel-deploy'
+          PR_PREVIEW_DOMAIN: 'storybook-{REPO}-{PR}.${{ vars.APP_DOMAIN }}'
+          ALIAS_DOMAINS: https://storybook.${{ vars.APP_DOMAIN }}
 
       - name: Health check the deployed service URL
         uses: jtalk/url-health-check-action@v3
