--- a/.github/workflows/deploy-storybook.yaml
+++ b/.github/workflows/deploy-storybook.yaml
@@ -35,7 +35,7 @@ jobs:
           }' >> vercel.json
 
       - name: Deploy to Vercel Action
-        id: deploy-vercel
+        id: storybook-vercel-deploy
         uses: BetaHuhn/deploy-to-vercel-action@v1
         with:
           GITHUB_TOKEN: ${{ secrets.GH_PAT }}
@@ -49,11 +49,32 @@ jobs:
             BASE_URL=${{ secrets.BASE_URL }}
           PR_PREVIEW_DOMAIN: 'storybook-{REPO}-{PR}.${{ vars.APP_DOMAIN }}'
           ALIAS_DOMAINS: https://storybook.${{ vars.APP_DOMAIN }}
+          CREATE_COMMENT: false
+
+      - uses: phulsechinmay/rewritable-pr-comment@v0.3.0
+        if: ${{ steps.storybook-vercel-deploy.outputs.DEPLOYMENT_CREATED }}
+        with:
+          message: |
+            This pull request has been deployed to Vercel.
+
+            <table>
+              <tr>
+                <td><strong>✅ Storybook preview:</strong></td>
+                <td><a href='${{ steps.storybook-vercel-deploy.outputs.PREVIEW_URL }}'>${{ steps.storybook-vercel-deploy.outputs.PREVIEW_URL }}</a></td>
+              </tr>
+              <tr>
+                <td><strong>🔍 Inspect:</strong></td>
+                <td><a href='${{ steps.storybook-vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }}'>${{ steps.storybook-vercel-deploy.outputs.DEPLOYMENT_INSPECTOR_URL }}</a></td>
+              </tr>
+            </table>
+
+          GITHUB_TOKEN: ${{ secrets.GH_PAT }}
+          COMMENT_IDENTIFIER: 'storybook-vercel-deploy'
 
       - name: Health check the deployed service URL
         uses: jtalk/url-health-check-action@v3
         with:
-          url: ${{steps.deploy-vercel.outputs.PREVIEW_URL}}
+          url: ${{steps.storybook-vercel-deploy.outputs.PREVIEW_URL}}
           follow-redirect: false
           max-attempts: 3
           retry-delay: 5s
