DND-7: Not remove comments

--- a/.github/workflows/deployment.yaml
+++ b/.github/workflows/deployment.yaml
@@ -57,6 +57,7 @@ jobs:
             BASE_URL=${{ secrets.BASE_URL }}
           PR_PREVIEW_DOMAIN: 'app-{REPO}-{PR}.${{ vars.APP_DOMAIN }}'
           ALIAS_DOMAINS: https://${{ inputs.domain }}${{ vars.APP_DOMAIN }}
+          DELETE_EXISTING_COMMENT: false
 
       - name: Health check the deployed service URL
         uses: jtalk/url-health-check-action@v3
