--- a/.github/workflows/deploy-storybook.yaml
+++ b/.github/workflows/deploy-storybook.yaml
@@ -50,6 +50,7 @@ jobs:
           PR_PREVIEW_DOMAIN: 'storybook-{REPO}-{PR}.${{ vars.APP_DOMAIN }}'
           ALIAS_DOMAINS: https://storybook.${{ vars.APP_DOMAIN }}
           CREATE_COMMENT: false
+          DELETE_EXISTING_COMMENT: false
 
       - uses: phulsechinmay/rewritable-pr-comment@v0.3.0
         if: ${{ steps.storybook-vercel-deploy.outputs.DEPLOYMENT_CREATED }}
